--- a/index.html
+++ b/index.html
@@ -251,15 +251,17 @@
 								<a href="#" class="icon solid fa-angle-down">Specific Country Stats</a>
 								<ul>
 									<!-- modification start specific_stat -->
-<li><a href="Luxembourg.html">Luxembourg</a></li>
-<li><a href="Netherlands.html">Netherlands</a></li>
+<li><a href="Greece.html">Greece</a></li>
 <li><a href="Germany.html">Germany</a></li>
+<li><a href="Luxembourg.html">Luxembourg</a></li>
 <li><a href="United States.html">United States</a></li>
 <li><a href="UK.html">UK</a></li>
-<li><a href="Deutschland.html">Deutschland</a></li>
-<li><a href="India.html">India</a></li>
+<li><a href="Netherlands.html">Netherlands</a></li>
+<li><a href="Norway.html">Norway</a></li>
 <li><a href="Denmark.html">Denmark</a></li>
-<li><a href="Greece.html">Greece</a></li>
+<li><a href="India.html">India</a></li>
+<li><a href="USA.html">USA</a></li>
+<li><a href="Deutschland.html">Deutschland</a></li>
 									<!-- modification end specific_stat -->
 								</ul>
 							</li>
@@ -287,15 +289,17 @@
 								<button class="dropbtn">here</button>
 								<div class="dropdown-content">
 									<!-- modification start dropdown -->
-<a href="Luxembourg.html">Luxembourg</a>
-<a href="Netherlands.html">Netherlands</a>
+<a href="Greece.html">Greece</a>
 <a href="Germany.html">Germany</a>
+<a href="Luxembourg.html">Luxembourg</a>
 <a href="United States.html">United States</a>
 <a href="UK.html">UK</a>
-<a href="Deutschland.html">Deutschland</a>
-<a href="India.html">India</a>
+<a href="Netherlands.html">Netherlands</a>
+<a href="Norway.html">Norway</a>
 <a href="Denmark.html">Denmark</a>
-<a href="Greece.html">Greece</a>
+<a href="India.html">India</a>
+<a href="USA.html">USA</a>
+<a href="Deutschland.html">Deutschland</a>
 									<!-- modification end dropdown -->
 								</div>
 							  </div>
